[metadata]
name = Tononkira Malagasy
version = 1.0.0
author = iTeam-$
author_email = gaetan@iteam-s.mg
description = Unofficial Module and CLI tool to get Malagasy song lyrics from https://tononkira.serasera.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaetan1903/tononkira
project_urls =
    Bug Tracker = https://github.com/gaetan1903/tononkira/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = find:
python_requires = >=3.6